🗃️ ️add `profile` to `group` #70
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>